<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:orientation="vertical">
    <EditText
        android:id="@+id/edituname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textSize="20sp"
        android:textColorHint="@color/colorPrimary"
        android:hint="@string/enter_username"
        android:autofillHints=""
        android:inputType="text"
        />
    <EditText
        android:id="@+id/editpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textSize="20sp"
        android:textColorHint="@color/colorPrimary"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:autofillHints=""
        />
    <EditText
        android:id="@+id/editconpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:textSize="20sp"
        android:textColorHint="@color/colorPrimary"
        android:hint="@string/confirm_password"
        android:autofillHints=""
        android:inputType="textPassword"
        />
    <Button
        android:id="@+id/reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/butn"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:text="@string/register"
        />
</LinearLayout>