<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical">

    <EditText
        android:id="@+id/eduname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:inputType="text"
        android:hint="@string/enter_username"
        android:textSize="20sp"
        android:textColorHint="@color/colorPrimary"
        android:autofillHints=""
        />
    <EditText
        android:id="@+id/edpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:inputType="textPassword"
        android:hint="@string/enter_password"
        android:textSize="20sp"
        android:textColorHint="@color/colorPrimary"
        android:autofillHints=""
        />
    <Button
        android:id="@+id/log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/butn"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:text="@string/login"
        />
</LinearLayout>